# SplayTree-vs-BTree

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
include/: BTree.h  BTree.hpp  SplayTree.h  SplayTree.hpp
main/: .main.cpp.swp  main.cpp
source/: BTree.cpp  SplayTree.cpp  SplayTree_vs_BTree.cpp  main.cpp
tests/: B_Insert.cpp  B_Max.cpp  B_Min.cpp  B_Remove.cpp  B_Search.cpp  Splay_Insert.cpp  Splay_Max.cpp  Splay_Min.cpp  Splay_Remove.cpp  Splay_Search.cpp  Splay_Splay.cpp  test1.ans  test10.ans  test11.ans  test12.ans  test13.ans  test14.ans  test2.ans  test3.ans  test4.ans  test5.ans  test6.ans  test7.ans  test8.ans  test9.ans
